--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Página web de ejemplo</title>
 </head>
 <body>
+    <h1> Este es el título principal del contenido de la página</h1>
     
 </body>
 </html>
